feat: solutions and projects

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,5 +4,6 @@
 @import './styles/components/navbar.scss';
 @import './styles/pages/home.scss';
 @import './styles/pages/solutionsAndProjects.scss';
+@import './styles/components/projects.scss';
 
 
