--- a/src/sass/styles/components/navbar.scss
+++ b/src/sass/styles/components/navbar.scss
@@ -2,10 +2,11 @@
         display: flex;
         justify-content: space-evenly;
         height: 15vh;
-        padding: 1em 0;
+        width: auto;
         
         .image-container{
             img{
+                padding: 1rem;
                 zoom: 0.8;
             }
         }
@@ -13,14 +14,15 @@
         .links-container{
             display: flex;
             list-style: none;
-            width: 70%;
+            width: auto;
             justify-content: center;
             align-self: center;
-    
-    
+            align-items: center;
+            padding-top: 2rem;
+
              .links{
                 margin: 1em 3em;
-                @include text-style(1em, 300, 1em, white);
+                @include text-style(1em, 500, 1em, white);
                 padding-bottom: 0.75em;
                 border: 2px solid transparent;
     
