--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,5 +5,6 @@
 @import './styles/pages/home.scss';
 @import './styles/pages/solutionsAndProjects.scss';
 @import './styles/components/projects.scss';
+@import './styles/components/footer.scss';
 
 
