--- a/src/sass/styles/components/projects.scss
+++ b/src/sass/styles/components/projects.scss
@@ -6,7 +6,7 @@
     width: 85%;
     height: 100vh;
     border-radius: 25px;
-    margin-top: 10em;
+    margin-top: 1.5rem;
     
 
     .container {
