--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,8 +3,9 @@
 @import "./styles/utils/variables.scss";
 @import './styles/components/navbar.scss';
 @import './styles/pages/home.scss';
-@import './styles/pages/solutionsAndProjects.scss';
+@import './styles/components/CardSolutions.scss';
 @import './styles/components/projects.scss';
 @import './styles/components/footer.scss';
+@import './styles/components/beneficts.scss'
 
 
