--- a/src/sass/styles/components/footer.scss
+++ b/src/sass/styles/components/footer.scss
@@ -1,6 +1,6 @@
 footer{
-    background-color: $base-color;
-    color: white;
+    background-color: $secondary-color;
+    color: $light-text;
     display:grid;
     grid-template-columns: repeat(3, 1fr);
     height: 60vh;
@@ -13,7 +13,7 @@ footer{
             margin-top: 1rem;
             .links{
                 list-style: none;
-                @include text-style(0.95rem, 200, 2.25rem, white);
+                @include text-style(0.95rem, 200, 2.25rem, $light-text);
 
             }
         }
@@ -33,7 +33,7 @@ footer{
     .list-container{
           margin-top: 1rem;
         .list-item-container{
-            @include text-style(0.95rem, 200, 2.25rem, white);
+            @include text-style(0.95rem, 200, 2.25rem, $light-text);
             list-style:inside;
         }
     }
@@ -45,11 +45,11 @@ footer{
             padding: 1rem 0;
         }
         p{
-            @include text-style(0.95rem, 200, 1.45rem, $text-color);
+            @include text-style(0.95rem, 200, 1.45rem, $light-text);
             padding: 0.25rem 0;
         }
         span{
-            color: $text-color;
+            color: $light-text;
             text-decoration: underline;
         }
     }
