--- a/src/sass/styles/utils/responsive.scss
+++ b/src/sass/styles/utils/responsive.scss
@@ -7,46 +7,37 @@ $sm: 640px; // Small - 40 rem
 $ssm: 360px; // Super Small 0 22.5rem
 
 @mixin d($size) {
-    @if $size == x14 {
-        @media screen and (min-width: $x14) {
-            @content
-        }
+  @if $size ==x14 {
+    @media screen and (min-width: $x14) {
+      @content;
     }
-
-    @else if $size == x13{
-        @media screen and (min-width: $x13) {
-            @content
-        }
+  } @else if $size ==x13 {
+    @media screen and (min-width: $x13) {
+      @content;
     }
-
-    @else if $size == x12{
-        @media screen and (min-width: $x12) {
-            @content
-        }
+  } @else if $size ==x12 {
+    @media screen and (min-width: $x12) {
+      @content;
     }
-    @else if $size == x1{
-        @media screen and (min-width: $x12) {
-            @content
-        }
+  } @else if $size ==x1 {
+    @media screen and (min-width: $x12) {
+      @content;
     }
-    @else if $size == lg{
-        @media screen and (min-width: $lg) {
-            @content
-        }
+  } @else if $size ==lg {
+    @media screen and (min-width: $lg) {
+      @content;
     }
-    @else if $size == md{
-        @media screen and (min-width: $md) {
-            @content
-        }
+  } @else if $size ==md {
+    @media screen and (min-width: $md) {
+      @content;
     }
-    @else if $size == sm{
-        @media screen and (min-width: $sm) {
-            @content
-        }
+  } @else if $size ==sm {
+    @media screen and (min-width: $sm) {
+      @content;
     }
-    @else if $size == ssm{
-        @media screen and (min-width: $ssm) {
-            @content
-        }
+  } @else if $size ==ssm {
+    @media screen and (min-width: $ssm) {
+      @content;
     }
+  }
 }
