--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,11 +1,14 @@
 @import "./styles/utils/global.scss";
 @import "./styles/utils/mixin.scss";
 @import "./styles/utils/variables.scss";
-@import './styles/components/navbar.scss';
-@import './styles/pages/home.scss';
-@import './styles/components/CardSolutions.scss';
-@import './styles/components/projects.scss';
-@import './styles/components/footer.scss';
-@import './styles/components/beneficts.scss'
+@import "./styles/components/navbar.scss";
 
+/* PAGES */
+@import "./styles/pages/home.scss";
 
+/* COMPONETS */
+@import "./styles/components/cardSolutions.scss";
+@import "./styles/components/projects.scss";
+@import "./styles/components/footer.scss";
+@import "./styles/components/beneficts.scss";
+@import "./styles/components/partners.scss";
