--- a/src/sass/styles/pages/home.scss
+++ b/src/sass/styles/pages/home.scss
@@ -1,71 +1,106 @@
 .home {
-    height: 100%;
-   
+  height: 100%;
 
-    .main-container{
-        display: flex;
-        height: 100vh;
-        background-color: $background;
+  .main-container {
+    display: flex;
+    height: 100vh;
+    background-color: $background;
 
+    .container-home {
+      height: auto;
+      width: 60vw;
+      flex-direction: column;
+      justify-content: center;
+      padding: 5em 2.5em;
 
-        .container-home{
-            height: auto;
-            width: 60vw;
-            flex-direction: column;
-            justify-content: center;
-            padding: 5em 2.5em;
+      h1 {
+        @include text-style(8rem, 800, 1.2em, $text-color);
+      }
+      h2 {
+        @include text-style(2rem, 700, 1em, $primary-color);
+        letter-spacing: 6px;
+      }
+      p {
+        @include text-style(1.4rem, 300, 1.6em, $text-color);
+        width: 50vw;
+        padding: 2rem 1rem 0 1rem;
+      }
 
-               h1{
-                    @include text-style(8rem, 800, 1.2em,  $text-color);
-                    
-                    
-                }
-                h2{
-                    @include text-style(2rem, 700, 1em,  $text-color);
-                    letter-spacing: 6px;
-                }
-                p{
-                    @include text-style(1.4rem, 300, 1.6em,  $text-color);
-                    width: 50vw;
-                    padding: 2rem 1rem 0 1rem;
-                    
-                }
-        
-                button{
-                    margin: 2rem 1rem;
-                    @include button-style(none, 1px solid  $orange,  3rem, 10rem, none, $orange);
-                    cursor: pointer;
-                    &:hover{
-                        @include button-style(none, 1px solid $primary-color, 3rem, 10rem, none, $primary-color);
-
-                    }
-                    a{
-                        color: $text-color;
-                    }
-              
-                }
-                
-            }
-      
-            .image-principal-container{
-                height: auto;
-                width: 100%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                .image{
-                    width: 80%;
-                }    
-                    
-                    
-            }
-    }
-   
-        @media screen and (min-width: 280px) and (max-width: 1000px) {
-            padding: 0;
-            &::-webkit-scrollbar {
-                display: none;
-            }
+      button {
+        margin: 2rem 1rem;
+        @include button-style(
+          none,
+          1px solid $orange,
+          3rem,
+          10rem,
+          none,
+          $orange
+        );
+        cursor: pointer;
+        &:hover {
+          @include button-style(
+            none,
+            1px solid $primary-color,
+            3rem,
+            10rem,
+            none,
+            $primary-color
+          );
         }
+        a {
+          color: $text-color;
+        }
+      }
+    }
+
+    .image-principal-container {
+      height: auto;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .img {
+        width: 80%;
+      }
+    }
+  }
+}
+@media screen and (min-width: 280px) and (max-width: 1080px) {
+  .home {
+    width: auto;
+    .main-container {
+      .container-home {
+        position: absolute;
+        width: 100%;
+        padding: 2rem;
+        h1 {
+          @include text-style(5rem, 600, 1.2em, $text-color);
+        }
+        h2 {
+          @include text-style(1.5rem, 500, 1em, $primary-color);
+          letter-spacing: 6px;
+        }
+        p {
+          @include text-style(1rem, 300, 1.6em, $text-color);
+          width: 70vw;
+          padding: 2rem 1rem 0 1rem;
+        }
+      }
+      .image-principal-container {
+        height: auto;
+        width: 100%;
+        display: flex;
+        justify-content: end;
+        align-items:end;
+        z-index: 10;
+
+
+        img {
+        zoom: 0.65; 
+
+        }
+      }
+    }
+  }
 }
