--- a/src/sass/styles/utils/global.scss
+++ b/src/sass/styles/utils/global.scss
@@ -7,6 +7,11 @@
     text-decoration: none;
     
 }
+@media screen and (min-width: 280px) and (max-width: 1000px) {
+    ::-webkit-scrollbar {
+        display: none;
+    }
+}
 
 html{
     scroll-behavior: smooth;
