--- a/src/sass/styles/components/navbar.scss
+++ b/src/sass/styles/components/navbar.scss
@@ -3,9 +3,9 @@
   justify-content: space-between;
   align-items: center;
   .brand {
+    padding-top: 1rem;
     img {
-      height: 90%;
-      padding-top: 3.25rem;
+      zoom: 0.7;
     }
   }
   
