--- a/src/sass/styles/components/projects.scss
+++ b/src/sass/styles/components/projects.scss
@@ -1,102 +1,148 @@
-/* PROJETOS */
-
 /* Estilos para o container de projetos */
 .projects {
+  margin:  1.5rem auto;
+  width: 85%;
+  height: 100vh;
+ 
+
+
+  .container {
+    width: auto;
+    height: 80vh;
+    overflow: hidden;
+    display: flex;
+  }
+
+  .project-section {
+    height: auto;
+    display: none;
+    width: auto;
+    padding-top: 4rem;
+  }
+
+  .project-section.active {
+    display: block;
+  }
+
+  .img-projects {
+    width: 40%;
+    float: right;
+    height: auto;
+    padding-right: 4%;
+    text-align: center;
+
+    img {
+      width: 100%;
+      border-radius: 10px;
+    }
+  }
+
+  .texto-projects {
+    float: left;
+    width: 60%;
+    height: auto;
+    padding-top: 1em;
+    padding-left: 3em;
+
+    h6 {
+      @include text-style(1.25em, 600, 1rem, $orange);
+      letter-spacing: 0.6em;
+    }
+
+    h1 {
+      @include text-style(3.1rem, 500, rem, $text-color);
+      padding-top: 0.5em;
+    }
+    p {
+      margin-top: 1rem;
+    }
+  }
+
+  .navigation {
+    /* Estilos para a navegação */
     margin: 0 auto;
-    width: 85%;
-    height: 100vh;
-    border-radius: 25px;
-    margin-top: 1.5rem;
-    
+    width: 80%;
+    background-color: none;
+    padding: 1rem;
+    text-align: center;
 
-    .container {
-        width: auto;
-        height: 80vh;
-        overflow: hidden;
-        display: flex;
+    a {
+      display: inline-block;
+      font-size: 1.1em;
+      padding: 0 2em;
+      margin: 0 10px;
+      cursor: pointer;
+      color: $text-color;
     }
 
-    .project-section {
-        height: auto;
-        display: none;
-        width: auto;
-        padding-top: 4rem;
-
+    a.active {
+      border-top: 4px solid $primary-color;
+      border-radius: 3px;
+      padding-top: 1em;
+      color: $primary-color;
+      font-size: 1em;
+      transition: 0.3s ease;
     }
-
-    .project-section.active {
-        display: block;
-    }
-
-    .img-projects {
-        width: 40%;
-        float: right;
-        height: auto;
-        padding-right: 4%;
-        text-align: center;
-
-        img {
-            width: 100%;
-            border-radius: 10px;
-        }
-    }
-
-    .texto-projects {
-        float: left;
-        width: 60%;
-        height: auto;
-        padding-top: 1em;
-        padding-left: 3em;
-
-        h6 {
-            color: $orange;
-            letter-spacing: 0.6em;
-            font-size: 1.25em;
-            font-weight: 600;
-        }
-
-        h1 {
-            color: $text-color;
-            font-size: 3.10rem;
-            font-weight: 500;
-            padding-top: 0.5em;
-        }
-        p{
-            margin-top: 1rem;
-        }
-    }
-
-
-    .navigation {
-        /* Estilos para a navegação */
-        margin: 0 auto;
-        width: 80%;
-        background-color: none;
-        padding: 1.5%;
-        text-align: center;
-
-        a {
-            display: inline-block;
-            font-size: 1.1em;
-            padding: 0 2em;
-            margin: 0 10px;
-            cursor: pointer;
-            color: $text-color;
-            
-        }
-
-        a.active {
-            border-top: 4px solid $primary-color;
-            border-radius: 3px;
-            padding-top: 1em;
-            color: $primary-color;
-            font-size: 1em;
-            transition: 0.3s ease;
-
-        }
-    }
-
-
+  }
 }
 
+@media screen and (min-width: 280px) and (max-width: 1080px) {
+  .projects {
+    width: 100%;
+    height: 85vh;
+    .container {
+      height: 100%;
+      width: auto;
+      height: auto;
+    }
+    .project-section {
+      padding-top: 0;
+    }
+    .img-projects {
+      float: none;
+      width: 80%;
+      height: 45vh;
+      padding-top: 0;
+      padding-left: 0;
+      img {
+        width: 75%;
+      }
+    }
+    .texto-projects {
+      float: none;
+      width: 100%;
+      height: auto;
+      padding-top: 1em;
+      padding-left: 3em;
+      h6 {
+        @include text-style(1rem, 600, 1.1rem, $orange);
+      }
+      h1 {
+        @include text-style(1.5rem, 500, rem, $text-color);
+      }
+    }
 
+    .navigation {
+      margin-top: 1rem;
+      position: relative;
+      width: auto;
+      padding: 1rem;
+      display: flex;
+
+      a {
+        padding: 0.3rem;
+        margin: 0;
+        width: 100%;
+        font-size: 0.90em;
+      }
+
+      a.active {
+        border-top: 4px solid $primary-color;
+        padding-top: 0;
+        color: $primary-color;
+        font-size: 0.9em;
+        transition: 0.3s ease;
+      }
+    }
+  }
+}
