--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,14 +1,16 @@
 @import "./styles/utils/global.scss";
 @import "./styles/utils/mixin.scss";
 @import "./styles/utils/variables.scss";
+
+/* COMPONENTS GLOBAIS */
 @import "./styles/components/navbar.scss";
+@import "./styles/components/footer.scss";
 
 /* PAGES */
 @import "./styles/pages/home.scss";
 
-/* COMPONETS */
-@import "./styles/components/cardSolutions.scss";
-@import "./styles/components/projects.scss";
-@import "./styles/components/footer.scss";
-@import "./styles/components/beneficts.scss";
-@import "./styles/components/partners.scss";
+/* COMPONETS HOME*/
+@import "./styles/components/home/cardSolutions.scss";
+@import "./styles/components/home/projects.scss";
+@import "./styles/components/home/beneficts.scss";
+@import "./styles/components/home/partners.scss";
