--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,15 +2,18 @@
 @import "./styles/utils/mixin.scss";
 @import "./styles/utils/variables.scss";
 
-/* COMPONENTS GLOBAIS */
+/*GLOBALS COMPONENTS  */
 @import "./styles/components/navbar.scss";
 @import "./styles/components/footer.scss";
 
 /* PAGES */
 @import "./styles/pages/home.scss";
 
-/* COMPONETS HOME*/
+/* HOME COMPONETS */
 @import "./styles/components/home/cardSolutions.scss";
 @import "./styles/components/home/projects.scss";
 @import "./styles/components/home/beneficts.scss";
 @import "./styles/components/home/partners.scss";
+
+/* CONTACT COMPONENTS */
+@import "styles/components/contact/form.scss";
