--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 
 /* PAGES */
 @import "./styles/pages/home.scss";
+@import "./styles/pages/about.scss";
 
 /* HOME COMPONETS */
 @import "./styles/components/home/cardSolutions.scss";
