--- a/src/sass/styles/pages/about.scss
+++ b/src/sass/styles/pages/about.scss
@@ -2,7 +2,12 @@
   display: flex;
   align-items: center;
   margin-top: 5rem;
-
+  img{
+    &:hover{
+      scale: 1.1;
+      transition: 2s ease-in-out;
+    }
+  }
   .text-content {
     width: 50vw;
 
@@ -19,13 +24,25 @@
     button {
       @include button-style(
         none,
-        none,
+        1px solid transparent,
         3rem,
         15rem,
         $secondary-color,
         $light-text
       );
       font-size: 1.25rem;
+      cursor: pointer;
+
+      &:hover{
+        @include button-style(
+          none,
+          1px solid $primary-color,
+          3rem,
+          15rem,
+          transparent,
+          $secondary-color
+        );
+      }
     }
   }
 }
@@ -33,7 +50,7 @@
     display: flex;
     justify-content: center;
     margin: 10rem 2rem;
-    background-color: $orange;
+    background-color: $secondary-color;
     border-radius: 10px;
 
     .values-item{
@@ -45,15 +62,19 @@
         margin: 3rem 1rem;
 
         img{
-            width: 10rem;
+            width: 8rem;
+          &:hover{
+            scale: 1.2;
+            transition: 2s ease-in-out;
+          }
         }
         
         h3{
-            @include text-style(2.75rem, 600, 2rem, $light-text);
+            @include text-style(2.55rem, 600, 2rem, $light-text);
             margin: 2rem 0;
         }
         p{
-            @include text-style(1.2rem, 300, 2rem, $light-text);
+            @include text-style(1.1rem, 300, 2rem, $light-text);
         }
     }
 }
