--- a/src/sass/styles/components/form.scss
+++ b/src/sass/styles/components/form.scss
@@ -46,35 +46,6 @@
       display: flex;
       flex-direction: column;
 
-      .checkbox {
-        display: flex;
-        span {
-          input[type="checkbox"] {
-            display: none;
-          }
-
-          label.checkbox-label {
-            position: relative;
-            display: block;
-            cursor: pointer;
-            border: 1px solid red;
-            &::before {
-              position: absolute;
-              width: 20px;
-              left: 0;
-              top: 0;
-            }
-            &::after {
-              content: "✔";
-              border: 1px solid $secondary-color;
-              visibility: hidden;
-              position: absolute;
-              left: 5px;
-              top: -1px;
-            }
-          }
-        }
-      }
       .form-msg {
         display: flex;
         flex-direction: column;
@@ -83,6 +54,7 @@
         input,
         textarea {
           width: 100%;
+          height: auto;
           outline: none;
           border: none;
           border-bottom: 1px solid white;
